# starrocks

be/src/bench/: persistent_index_bench.cpp
be/src/column/: chunk.cpp  chunk.h
be/src/common/: config.h
be/src/exec/: olap_scan_node.cpp  tablet_sink.cpp  tablet_sink.h
be/src/http/: http_request.cpp  http_request.h
be/src/runtime/: lake_tablets_channel.cpp  local_tablets_channel.cpp
be/src/service/: starrocks_main.cpp
be/src/storage/: CMakeLists.txt  chunk_helper.cpp  chunk_helper.h  chunk_iterator.cpp  compaction_delvec_reader.cpp  compaction_delvec_reader.h  data_dir.cpp  data_dir.h  delta_column_group.cpp  delta_column_group.h  local_primary_key_recover.cpp  local_primary_key_recover.h  merge_iterator.cpp  olap_common.h  olap_server.cpp  persistent_index.cpp  persistent_index.h  primary_index.cpp  primary_index.h  primary_key_compaction_conflict_resolver.cpp  primary_key_compaction_conflict_resolver.h  primary_key_recover.cpp  primary_key_recover.h  rowset_column_update_state.cpp  rowset_column_update_state.h  rowset_merger.cpp  storage_engine.cpp  storage_engine.h  tablet_manager.cpp  tablet_manager.h  tablet_meta_manager.cpp  tablet_meta_manager.h  (+4 more)
be/test/: CMakeLists.txt
be/test/storage/: compaction_delvec_reader_test.cpp  tablet_updates_test.cpp
be/test/storage/lake/: lake_primary_key_consistency_test.cpp  partial_update_test.cpp  primary_key_compaction_task_test.cpp  primary_key_publish_test.cpp
gensrc/proto/: internal_service.proto  lake_types.proto  olap_file.proto  persistent_index.proto
gensrc/thrift/: FrontendService.thrift  Types.thrift
(+65 files in other folders)
